(bug) invisible column on top of provide address (#608)

--- a/app/src/modules/wallet/tokens/onboarding/onchain/onchain.component.scss
+++ b/app/src/modules/wallet/tokens/onboarding/onchain/onchain.component.scss
@@ -57,3 +57,7 @@
   }
   
 }
+
+.m-token--onboarding-setup-options {
+  z-index: 10;
+}
